fixed spacing on home screen

--- a/client/src/assets/Home.css
+++ b/client/src/assets/Home.css
@@ -8,8 +8,8 @@
 .welcome-message{
   margin-top: 100px;
   font-size: 40px;
-  width: 750px;
-  color: #212a2f
+  color: #212a2f;
+  width: 625px;
 }
 
 .view-portfolio{
